<resources>

    <string name="app_name">Procure_Pro</string>

    <!--    text views-->
    <string name="TVprocurePro">ProcurePro</string>
    <string name="TVupdatesection">Update Section</string>
    <string name="TvStaffId">Site Manager Id</string>
    <string name="TvOrderNumber">Order Number</string>
    <string name="TvAddDelivery">Add a New Delivery</string>
    <string name="TvUpdateproduct">Update Product</string>
    <string name="TvProductName">Product Name</string>
    <string name="TvSection">Section</string>
    <string name="TvProducts">Products</string>
    <string name="Tvsections">Sections</string>
    <string name="TvNewOrder">Add New Order</string>
    <string name="TvUpdateOrder">Update Order</string>
    <string name="TvsecWI">Here is whats inside section</string>
    <string name="TvSiteManager">Welcome Site Manager</string>
    <string name="TvAdmin">Welcome Site Admin</string>
    <string name="TVlogin">Enter Site Manager Name and Password</string>
    <string name="TvSite">Site</string>
    <string name="TvItem">Item</string>
    <string name="TvQty">Quantity</string>
    <string name="TvAddress">Address</string>
    <string name="Tvorder_number">Order Number</string>
    <string name="TvPhone_number">Phone Number</string>
    <string name="Tvoreders">Orders</string>
    <string name="TvDeliveries">Deliveries</string>
    <string name="TvDate">Date</string>
    <string name="TvPrice">Price</string>
    <string name="TvStatus">Status</string>
    <string name="TvOrderStatus">Order Status</string>


    <!--    buttons-->

    <string name="AddBtn">Add</string>
    <string name="UpdateBtn">Update</string>
    <string name="ApproveBtn">Approve</string>
    <string name="DeleteBtn">Delete</string>
    <string name="DeclineBtn">Dectilne</string>
    <string name="productsBtn">Add purchase orders</string>
    <string name="sectionsBtn">Manage purchase orders</string>
    <string name="mapBtn">Order Status</string>
    <string name="addDeliveryBtn">Add Delivery</string>
    <string name="homeBtn">Deliver Management</string>
    <string name="btnLogin">Login</string>
    <string name="addSectionBtn">Add section</string>
    <string name="addProductbtn">add product</string>
    <string name="updateProductbtn">update</string>


    <!--    hints-->
    <string name="add_staff_id">Add Site Manager Id</string>
    <string name="add_order_number">Add Order Number</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="add_site_name">Add Site Name</string>
    <string name="add_item_name">Add Item Name</string>
    <string name="add_qty">Add Quantity</string>
    <string name="add_address">Add Address</string>
    <string name="hintpickdate">pickdate</string>


</resources>