<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".AddDelivery">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddNewSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:shadowColor="@color/light"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:text="@string/TvAddDelivery"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="30dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/dark">

            </View>

            <TextView
                android:id="@+id/tvSectionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/TvSite"
                android:textColor="@color/mid"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSectionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_site_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/TvAddress"
                android:textColor="@color/mid"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDirections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_address"
                android:inputType="textMultiLine"
                android:textColor="@color/mid"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/TvSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/TvDate"
                android:textColor="@color/mid"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDirections1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_site_name"
                android:inputType="textMultiLine"
                android:textColor="@color/mid"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/TvItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/TvPhone_number"
                android:textColor="@color/mid"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDirections2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_phone_number"
                android:inputType="textMultiLine"
                android:textColor="@color/mid"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/TvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/TvOrderNumber"
                android:textColor="@color/mid"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDirections3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_order_number"
                android:inputType="textMultiLine"
                android:textColor="@color/mid"
                android:textSize="10dp" />


            <Button
                android:id="@+id/btnAddSection"
                android:layout_width="@dimen/btnWidth"
                android:layout_height="@dimen/btnHeight"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:backgroundTint="@color/dark"
                android:onClick="addsecbtn"
                android:text="@string/AddBtn"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>