<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TvItem"
                android:textColor="@color/dark"
                android:layout_marginStart="8dp"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TvQty"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"
                android:textSize="15dp"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/TvStatus"
            android:textAlignment="textStart"
            android:textColor="@color/teal_200"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>